Fixed issue on PLP where product card borders were stretching down the page

--- a/static/css/products.css
+++ b/static/css/products.css
@@ -19,11 +19,14 @@ h5{
     padding: 10px 15px;
 }
 
+.products-height-container{
+    min-height: calc(100vh - 300px);
+}
 .products-container{
     flex-wrap:wrap;
     padding-top: 20px;
     justify-content: center;
-    min-height: calc(100vh - 278px);
+    
 }
 
 .product-card{
